Add threethirds.clicks.codes as a partner site (#2)

--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     <p>
       If you're looking for only 1/3, please check out our partner site at <a href="https://third.pinea.dev">third.pinea.dev</a>
     </p>
+    <p>
+      If you're looking for 3/3, please check out our partner site at <a href="https://threethirds.clicks.codes">threethirds.clicks.codes</a>
+    </p>
   </body>
 </html>
